// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fully eligible resident requirements met 1`] = `
Array [
  Object {
    "text": "Custody level is higher than latest CAF score suggests",
  },
  Object {
    "text": "Custody level is not maximum",
  },
  Object {
    "text": "Not eligible for annual reclassification",
  },
  Object {
    "text": "Last assessment did not include an override",
  },
]
`;

exports[`fully eligible resident with old criteria requirements met 1`] = `
Array [
  Object {
    "text": "Custody level is higher than latest CAF score suggests",
  },
  Object {
    "text": "Custody level is not maximum",
  },
  Object {
    "text": "At least 6 months since last violation",
  },
  Object {
    "text": "Had a violation in the past year",
  },
]
`;
